# motion_control

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cfg/: param_reconfig.cfg
include/: trajectory_generator.h  trajectory_tracking.h  trajectory_twist.h
launch/: controller.launch  controller.launch~
params/: controller.yaml
src/: hector_mcontrol.cpp  trajectory_generator.cpp  trajectory_tracking.cpp
